tests/NormalTests/paczka1/fuzzy1/12367904.err
Error in line 3: 1RCdOGE S477 85,5
Error in line 1: ag9BsAlE9i A335 85,4
Error in line 9: 1RCdOGE S920 11,8
Error in line 17: 1qM A335 4,2
Error in line 23: ag9BsAlE9i S477 62,0
